Entity and Seed Data Added

--- a/src/Api/WebApi/Forum.Api.WebApi/appsettings.Development.json
+++ b/src/Api/WebApi/Forum.Api.WebApi/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ForumDbConnectionString": "Server=localhost,1433;Database=ForumDb;User Id=SA;Password=Docker.123;TrustServerCertificate=True;"
 }
